複数ページ構成: サービス3ページ追加 + index.html更新

--- a/index.html
+++ b/index.html
@@ -1192,7 +1192,7 @@
                         <li>介護報酬の適正化</li>
                         <li>行政対応・法令遵守サポート</li>
                     </ul>
-                    <a href="#service-kaigo" class="service-more">詳しく見る →</a>
+                    <a href="service-kaigo.html" class="service-more">詳しく見る →</a>
                 </article>
                 <article class="service-card animate">
                     <div class="service-icon-wrap" aria-hidden="true">
@@ -1206,7 +1206,7 @@
                         <li>かかりつけ薬局化支援</li>
                         <li>接遇・患者対応力向上</li>
                     </ul>
-                    <a href="#service-yakkyoku" class="service-more">詳しく見る →</a>
+                    <a href="service-yakkyoku.html" class="service-more">詳しく見る →</a>
                 </article>
                 <article class="service-card animate">
                     <div class="service-icon-wrap" aria-hidden="true">
@@ -1220,121 +1220,9 @@
                         <li>リーダーシップ・マネジメント</li>
                         <li>コンプライアンス・リスク管理</li>
                     </ul>
-                    <a href="#service-kenshu" class="service-more">詳しく見る →</a>
+                    <a href="service-kenshu.html" class="service-more">詳しく見る →</a>
                 </article>
             </div>
-        </div>
-    </section>
-
-    <!-- Service Details -->
-    <section class="section" id="service-details">
-        <div class="container">
-
-            <!-- 介護施設経営サポート -->
-            <div class="service-detail animate" id="service-kaigo">
-                <div class="service-detail-header">
-                    <div class="service-icon-wrap" aria-hidden="true">
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
-                    </div>
-                    <h3>介護施設経営サポート</h3>
-                </div>
-                <div class="service-detail-body">
-                    <p>介護施設の経営は、人材不足・報酬改定・利用者確保など複合的な課題が絡み合います。ハッピーベルは現場を熟知した専門家が、施設の規模や地域特性に合わせた実行可能な改善プランを策定し、成果が出るまで伴走します。</p>
-                    <div class="detail-features">
-                        <div class="detail-feature">
-                            <h4>🏢 運営効率化・コスト改善</h4>
-                            <p>業務の無駄を洗い出し、シフト最適化・購買見直し・記録業務のICT化により、年間数百万円単位のコスト削減を実現した実績があります。</p>
-                        </div>
-                        <div class="detail-feature">
-                            <h4>👥 人材採用・定着率向上</h4>
-                            <p>求人原稿の改善から面接同席、入職後フォロー体制の構築まで。離職率を半減させた施設もあります。「辞めない職場づくり」を一緒に設計します。</p>
-                        </div>
-                        <div class="detail-feature">
-                            <h4>💰 介護報酬の適正化</h4>
-                            <p>加算の取りこぼしを徹底チェック。特定処遇改善加算・科学的介護推進体制加算など、取得可能な加算を漏れなく算定できる体制を整えます。</p>
-                        </div>
-                        <div class="detail-feature">
-                            <h4>📋 行政対応・法令遵守</h4>
-                            <p>実地指導・監査への事前準備、運営基準の自己点検、BCP策定支援まで。「指摘されてから慌てる」をなくし、安心して運営に集中できる環境を作ります。</p>
-                        </div>
-                    </div>
-                    <div class="detail-cta">
-                        <a href="#contact" class="btn btn-primary">介護施設の経営相談をする（無料）</a>
-                        <br><a href="#services" class="back-to-services">← サービス一覧に戻る</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- 調剤薬局支援サービス -->
-            <div class="service-detail animate" id="service-yakkyoku">
-                <div class="service-detail-header">
-                    <div class="service-icon-wrap" aria-hidden="true">
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 12h-4l-3 9L9 3l-3 9H2"/></svg>
-                    </div>
-                    <h3>調剤薬局支援サービス</h3>
-                </div>
-                <div class="service-detail-body">
-                    <p>2024年度調剤報酬改定、敷地内薬局の増加、医薬品供給不安——薬局を取り巻く環境は激変しています。ハッピーベルは、報酬算定の最適化から現場オペレーション改善、地域に根差した「かかりつけ薬局」への転換まで、薬局経営を多角的に支援します。</p>
-                    <div class="detail-features">
-                        <div class="detail-feature">
-                            <h4>💊 調剤報酬・加算の最適化</h4>
-                            <p>地域支援体制加算・かかりつけ薬剤師指導料・服薬情報等提供料など、算定可能な加算を網羅的に見直し。月10万円以上の増収につながるケースも。</p>
-                        </div>
-                        <div class="detail-feature">
-                            <h4>⚡ 業務フロー改善・DX推進</h4>
-                            <p>電子薬歴の活用最適化、対人業務へのシフト設計、オンライン服薬指導の導入支援。限られたスタッフで最大のパフォーマンスを発揮できる体制へ。</p>
-                        </div>
-                        <div class="detail-feature">
-                            <h4>🏥 かかりつけ薬局化支援</h4>
-                            <p>健康サポート薬局・地域連携薬局の認定取得に向けた体制整備、多職種連携の仕組みづくり、在宅訪問薬剤管理の立ち上げまでサポートします。</p>
-                        </div>
-                        <div class="detail-feature">
-                            <h4>😊 接遇・患者対応力向上</h4>
-                            <p>「また来たい」と思われる薬局へ。待ち時間対策、服薬指導の質向上、クレーム対応研修まで、患者満足度を数値で改善します。</p>
-                        </div>
-                    </div>
-                    <div class="detail-cta">
-                        <a href="#contact" class="btn btn-primary">薬局経営の相談をする（無料）</a>
-                        <br><a href="#services" class="back-to-services">← サービス一覧に戻る</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- 人材育成・研修サービス -->
-            <div class="service-detail animate" id="service-kenshu">
-                <div class="service-detail-header">
-                    <div class="service-icon-wrap" aria-hidden="true">
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17 21v-2a4 4 0 00-4-4H5a4 4 0 00-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M23 21v-2a4 4 0 00-3-3.87"/><path d="M16 3.13a4 4 0 010 7.75"/></svg>
-                    </div>
-                    <h3>人材育成・研修サービス</h3>
-                </div>
-                <div class="service-detail-body">
-                    <p>「研修はやったけど、現場が変わらない」——そんな経験はありませんか？ハッピーベルの研修は、座学＋実践ワーク＋フォローアップの3段構成。受けっぱなしで終わらせず、行動変容まで追いかけます。</p>
-                    <div class="detail-features">
-                        <div class="detail-feature">
-                            <h4>📚 階層別研修プログラム</h4>
-                            <p>新人向けの基礎研修から、中堅スタッフのスキルアップ、管理者向けのマネジメント研修まで。キャリアステージに合わせたプログラムを設計します。</p>
-                        </div>
-                        <div class="detail-feature">
-                            <h4>🤝 接遇・コミュニケーション</h4>
-                            <p>利用者・患者との信頼関係構築、ご家族対応、チーム内コミュニケーション。ロールプレイ中心の実践型で、翌日から使えるスキルを身につけます。</p>
-                        </div>
-                        <div class="detail-feature">
-                            <h4>🎯 リーダーシップ・マネジメント</h4>
-                            <p>「プレイヤーからリーダーへ」の壁を越える。チームビルディング、目標管理、1on1の進め方、部下育成のコツまで、実務に直結する内容です。</p>
-                        </div>
-                        <div class="detail-feature">
-                            <h4>⚖️ コンプライアンス・リスク管理</h4>
-                            <p>個人情報保護、ハラスメント防止、事故対応フロー、感染症対策。法改正にも対応した最新の内容で、組織のリスク耐性を高めます。</p>
-                        </div>
-                    </div>
-                    <div class="detail-cta">
-                        <a href="#contact" class="btn btn-primary">研修について相談する（無料）</a>
-                        <br><a href="#services" class="back-to-services">← サービス一覧に戻る</a>
-                    </div>
-                </div>
-            </div>
-
         </div>
     </section>
 
@@ -1530,9 +1418,11 @@
             <div class="footer-nav">
                 <h4>サイトマップ</h4>
                 <a href="#services">サービス</a>
+                <a href="service-kaigo.html">介護施設経営サポート</a>
+                <a href="service-yakkyoku.html">調剤薬局支援</a>
+                <a href="service-kenshu.html">人材育成・研修</a>
                 <a href="#strengths">選ばれる理由</a>
                 <a href="#process">ご利用の流れ</a>
-                <a href="#greeting">代表挨拶</a>
                 <a href="#company">会社概要</a>
                 <a href="#contact">お問い合わせ</a>
             </div>
