Split into multi-page site: index, about, contact + 3 service pages

--- a/service-yakkyoku.html
+++ b/service-yakkyoku.html
@@ -202,13 +202,12 @@
                 ハッピーベル
             </a>
             <ul class="nav-links" role="list">
-                <li><a href="index.html#services">サービス</a></li>
-                <li><a href="index.html#strengths">選ばれる理由</a></li>
-                <li><a href="index.html#process">ご利用の流れ</a></li>
-                <li><a href="index.html#greeting">代表挨拶</a></li>
-                <li><a href="index.html#company">会社概要</a></li>
+                <li><a href="about.html">会社概要</a></li>
+                <li><a href="service-kaigo.html">介護施設サポート</a></li>
+                <li><a href="service-yakkyoku.html">調剤薬局支援</a></li>
+                <li><a href="service-kenshu.html">研修サービス</a></li>
             </ul>
-            <a href="index.html#contact" class="nav-cta">
+            <a href="contact.html" class="nav-cta">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
                 お問い合わせ
             </a>
@@ -221,12 +220,12 @@
     <div class="mobile-overlay" aria-hidden="true"></div>
     <div class="mobile-menu" role="dialog" aria-label="モバイルメニュー">
         <button class="mobile-close" aria-label="メニューを閉じる">✕</button>
-        <a href="index.html#services">サービス</a>
-        <a href="index.html#strengths">選ばれる理由</a>
-        <a href="index.html#process">ご利用の流れ</a>
-        <a href="index.html#greeting">代表挨拶</a>
-        <a href="index.html#company">会社概要</a>
-        <a href="index.html#contact" class="mobile-cta">お問い合わせ</a>
+        <a href="index.html">ホーム</a>
+        <a href="about.html">会社概要</a>
+        <a href="service-kaigo.html">介護施設サポート</a>
+        <a href="service-yakkyoku.html">調剤薬局支援</a>
+        <a href="service-kenshu.html">研修サービス</a>
+        <a href="contact.html" class="mobile-cta">お問い合わせ</a>
     </div>
 
     <section class="page-hero">
@@ -284,7 +283,7 @@
                 <h3>調剤薬局支援サービス</h3>
                 <div class="price-label">要相談</div>
                 <p>店舗数・課題の内容・支援範囲に応じて最適なプランをご提案します。<br>初回相談は無料です。報酬加算の見直しだけでも対応可能です。<br>月額制・スポット対応など柔軟にご対応します。</p>
-                <a href="index.html#contact" class="btn btn-primary">無料相談を申し込む</a>
+                <a href="contact.html" class="btn btn-primary">無料相談を申し込む</a>
             </div>
         </div>
     </section>
@@ -321,7 +320,7 @@
             <h2 class="animate">薬局経営でお悩みですか？</h2>
             <p class="animate">初回相談は無料です。まずはお気軽にお問い合わせください。</p>
             <div class="animate">
-                <a href="index.html#contact" class="btn btn-primary">無料相談を申し込む</a>
+                <a href="contact.html" class="btn btn-primary">無料相談を申し込む</a>
             </div>
         </div>
     </section>
@@ -337,12 +336,12 @@
             </div>
             <div class="footer-nav">
                 <h4>サイトマップ</h4>
-                <a href="index.html#services">サービス</a>
-                <a href="index.html#strengths">選ばれる理由</a>
-                <a href="index.html#process">ご利用の流れ</a>
-                <a href="index.html#greeting">代表挨拶</a>
-                <a href="index.html#company">会社概要</a>
-                <a href="index.html#contact">お問い合わせ</a>
+                <a href="index.html">ホーム</a>
+                <a href="about.html">会社概要</a>
+                <a href="service-kaigo.html">介護施設サポート</a>
+                <a href="service-yakkyoku.html">調剤薬局支援</a>
+                <a href="service-kenshu.html">研修サービス</a>
+                <a href="contact.html">お問い合わせ</a>
             </div>
             <div class="footer-contact">
                 <h4>お問い合わせ</h4>
