--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 
     <style>
         :root {
-            --primary: #2D8E6F;
-            --primary-light: #E8F5F0;
-            --primary-dark: #1A5C47;
-            --accent: #D4873F;
-            --accent-light: #FFF3E8;
+            --primary: #1B2E5C;
+            --primary-light: #E8EBF2;
+            --primary-dark: #0F1D3D;
+            --accent: #C5A55A;
+            --accent-light: #FDF8EE;
             --text: #1A1A2E;
             --text-muted: #5A5A72;
             --bg: #FAFBFC;
@@ -70,16 +70,16 @@
         a { color: inherit; text-decoration: none; }
 
         /* HEADER */
-        .header { position: fixed; top: 0; left: 0; right: 0; background: rgba(255,255,255,0.97); backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px); border-bottom: 1px solid var(--border); z-index: 1000; }
+        .header { position: fixed; top: 0; left: 0; right: 0; background: rgba(27,46,92,0.97); backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px); border-bottom: none; z-index: 1000; }
         .nav { max-width: 1100px; margin: 0 auto; padding: 0 24px; display: flex; justify-content: space-between; align-items: center; height: 64px; }
-        .logo { display: flex; align-items: center; gap: 10px; font-weight: 700; font-size: 1.2rem; color: var(--primary); }
-        .logo svg { width: 32px; height: 32px; flex-shrink: 0; }
+        .logo { display: flex; align-items: center; gap: 10px; font-weight: 700; font-size: 1.2rem; color: #FFFFFF; }
+        .logo img { flex-shrink: 0; }
         .nav-links { display: flex; list-style: none; gap: 4px; }
-        .nav-links a { display: block; padding: 8px 14px; font-size: 0.88rem; font-weight: 500; color: var(--text-muted); border-radius: 8px; transition: color 0.2s, background 0.2s; }
-        .nav-links a:hover { color: var(--primary); background: var(--primary-light); }
-        .nav-cta { display: inline-flex; align-items: center; gap: 6px; padding: 9px 20px; background: var(--primary); color: var(--white) !important; border-radius: 50px; font-weight: 600; font-size: 0.88rem; transition: background 0.2s; }
-        .nav-cta:hover { background: var(--primary-dark); }
-        .hamburger { display: none; background: none; border: none; cursor: pointer; padding: 8px; }
+        .nav-links a { display: block; padding: 8px 14px; font-size: 0.88rem; font-weight: 500; color: rgba(255,255,255,0.85); border-radius: 8px; transition: color 0.2s, background 0.2s; }
+        .nav-links a:hover { color: #FFFFFF; background: rgba(255,255,255,0.12); }
+        .nav-cta { display: inline-flex; align-items: center; gap: 6px; padding: 9px 20px; background: var(--accent); color: var(--white) !important; border-radius: 50px; font-weight: 600; font-size: 0.88rem; transition: background 0.2s; }
+        .nav-cta:hover { background: #B8943D; }
+        .hamburger { display: none; background: none; border: none; cursor: pointer; padding: 8px; color: #FFFFFF; }
         .hamburger svg { display: block; }
 
         /* MOBILE MENU */
@@ -88,7 +88,7 @@
         .mobile-menu { display: none; position: fixed; top: 0; right: -280px; width: 280px; height: 100%; background: var(--white); z-index: 1001; padding: 72px 24px 24px; transition: right 0.3s ease; box-shadow: var(--shadow-lg); }
         .mobile-menu.active { right: 0; }
         .mobile-menu a { display: block; padding: 14px 16px; font-size: 1rem; font-weight: 500; color: var(--text); border-radius: 8px; margin-bottom: 4px; }
-        .mobile-menu .mobile-cta { text-align: center; margin-top: 16px; padding: 14px; background: var(--primary); color: var(--white); border-radius: 12px; font-weight: 600; }
+        .mobile-menu .mobile-cta { text-align: center; margin-top: 16px; padding: 14px; background: var(--accent); color: var(--white); border-radius: 12px; font-weight: 600; }
         .mobile-close { position: absolute; top: 20px; right: 20px; background: none; border: none; font-size: 24px; cursor: pointer; padding: 8px; color: var(--text-muted); }
 
         /* HERO — compact */
@@ -108,7 +108,7 @@
         .svc-link { font-size: 0.88rem; font-weight: 600; color: var(--primary); display: inline-flex; align-items: center; gap: 4px; }
 
         /* FOOTER */
-        .footer { background: var(--text); color: rgba(255,255,255,0.7); padding: 40px 24px 24px; margin-top: auto; }
+        .footer { background: #1B2E5C; color: rgba(255,255,255,0.7); padding: 40px 24px 24px; margin-top: auto; }
         .footer-inner { max-width: 960px; margin: 0 auto; display: grid; grid-template-columns: 2fr 1fr 1fr; gap: 40px; margin-bottom: 28px; }
         .footer-brand .logo { color: var(--white); margin-bottom: 8px; }
         .footer-brand p { font-size: 0.85rem; line-height: 1.7; }
@@ -138,7 +138,7 @@
     <header class="header">
         <nav class="nav">
             <a href="index.html" class="logo">
-                <svg viewBox="0 0 36 36" fill="none"><circle cx="18" cy="18" r="18" fill="#2D8E6F"/><path d="M18 9c-1.5 0-2.8 1-3.2 2.4L13 17h-2a2 2 0 00-2 2v1a6 6 0 005.1 5.9l.9.1h6l.9-.1A6 6 0 0027 20v-1a2 2 0 00-2-2h-2l-1.8-5.6A3.3 3.3 0 0018 9z" fill="#fff"/><circle cx="18" cy="27" r="1.5" fill="#D4873F"/></svg>
+                <img src="logo.jpg" alt="ハッピーベル" height="40" style="flex-shrink:0;">
                 ハッピーベル
             </a>
             <ul class="nav-links">
@@ -205,7 +205,7 @@
         <div class="footer-inner">
             <div class="footer-brand">
                 <div class="logo">
-                    <svg viewBox="0 0 36 36" fill="none" width="28" height="28"><circle cx="18" cy="18" r="18" fill="#2D8E6F"/><path d="M18 9c-1.5 0-2.8 1-3.2 2.4L13 17h-2a2 2 0 00-2 2v1a6 6 0 005.1 5.9l.9.1h6l.9-.1A6 6 0 0027 20v-1a2 2 0 00-2-2h-2l-1.8-5.6A3.3 3.3 0 0018 9z" fill="#fff"/><circle cx="18" cy="27" r="1.5" fill="#D4873F"/></svg>
+                    <img src="logo.jpg" alt="ハッピーベル" height="28" style="flex-shrink:0;">
                     ハッピーベル
                 </div>
                 <p>介護施設・調剤薬局の経営サポートと<br>人材育成研修で地域医療を支えます。</p>
