--- a/service-kaigo.html
+++ b/service-kaigo.html
@@ -69,11 +69,11 @@
 
     <style>
         :root {
-            --primary: #2D8E6F;
-            --primary-light: #E8F5F0;
-            --primary-dark: #1A5C47;
-            --accent: #D4873F;
-            --accent-light: #FFF3E8;
+            --primary: #1B2E5C;
+            --primary-light: #E8EBF2;
+            --primary-dark: #0F1D3D;
+            --accent: #C5A55A;
+            --accent-light: #FDF8EE;
             --text: #1A1A2E;
             --text-muted: #5A5A72;
             --text-light: #8A8A9A;
@@ -92,18 +92,18 @@
         img { max-width: 100%; height: auto; }
         a { color: inherit; text-decoration: none; }
 
-        .header { position: fixed; top: 0; left: 0; right: 0; background: rgba(255,255,255,0.97); backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px); border-bottom: 1px solid var(--border); z-index: 1000; transition: box-shadow 0.3s; }
-        .header.scrolled { box-shadow: var(--shadow); }
+        .header { position: fixed; top: 0; left: 0; right: 0; background: rgba(27,46,92,0.97); backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px); border-bottom: none; z-index: 1000; transition: box-shadow 0.3s; }
+        .header.scrolled { box-shadow: 0 4px 12px rgba(0,0,0,0.15); }
         .nav { max-width: 1100px; margin: 0 auto; padding: 0 24px; display: flex; justify-content: space-between; align-items: center; height: 72px; }
-        .logo { display: flex; align-items: center; gap: 10px; font-weight: 700; font-size: 1.25rem; color: var(--primary); }
-        .logo svg { width: 36px; height: 36px; flex-shrink: 0; }
+        .logo { display: flex; align-items: center; gap: 10px; font-weight: 700; font-size: 1.25rem; color: #FFFFFF; }
+        .logo img { flex-shrink: 0; }
         .nav-links { display: flex; list-style: none; gap: 8px; }
-        .nav-links a { display: block; padding: 8px 16px; font-size: 0.9rem; font-weight: 500; color: var(--text-muted); border-radius: 8px; transition: color 0.2s, background 0.2s; }
-        .nav-links a:hover, .nav-links a:focus-visible { color: var(--primary); background: var(--primary-light); }
-        .nav-cta { display: inline-flex; align-items: center; gap: 6px; padding: 10px 24px; background: var(--primary); color: var(--white) !important; border-radius: 50px; font-weight: 600; font-size: 0.9rem; transition: background 0.2s, transform 0.2s; }
-        .nav-cta:hover { background: var(--primary-dark); transform: translateY(-1px); }
-        .hamburger { display: none; background: none; border: none; cursor: pointer; padding: 8px; border-radius: 8px; }
-        .hamburger:hover { background: var(--bg); }
+        .nav-links a { display: block; padding: 8px 16px; font-size: 0.9rem; font-weight: 500; color: rgba(255,255,255,0.85); border-radius: 8px; transition: color 0.2s, background 0.2s; }
+        .nav-links a:hover, .nav-links a:focus-visible { color: #FFFFFF; background: rgba(255,255,255,0.12); }
+        .nav-cta { display: inline-flex; align-items: center; gap: 6px; padding: 10px 24px; background: var(--accent); color: var(--white) !important; border-radius: 50px; font-weight: 600; font-size: 0.9rem; transition: background 0.2s, transform 0.2s; }
+        .nav-cta:hover { background: #B8943D; transform: translateY(-1px); }
+        .hamburger { display: none; background: none; border: none; cursor: pointer; padding: 8px; border-radius: 8px; color: #FFFFFF; }
+        .hamburger:hover { background: rgba(255,255,255,0.12); }
         .hamburger svg { display: block; }
 
         .mobile-overlay { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.4); z-index: 999; opacity: 0; transition: opacity 0.3s; }
@@ -112,7 +112,7 @@
         .mobile-menu.active { right: 0; }
         .mobile-menu a { display: block; padding: 14px 16px; font-size: 1rem; font-weight: 500; color: var(--text); border-radius: 8px; margin-bottom: 4px; transition: background 0.2s; }
         .mobile-menu a:hover { background: var(--primary-light); color: var(--primary); }
-        .mobile-menu .mobile-cta { display: block; text-align: center; margin-top: 16px; padding: 14px; background: var(--primary); color: var(--white); border-radius: 12px; font-weight: 600; }
+        .mobile-menu .mobile-cta { display: block; text-align: center; margin-top: 16px; padding: 14px; background: var(--accent); color: var(--white); border-radius: 12px; font-weight: 600; }
         .mobile-close { position: absolute; top: 20px; right: 20px; background: none; border: none; font-size: 24px; cursor: pointer; padding: 8px; border-radius: 8px; color: var(--text-muted); }
 
         .page-hero { padding: 140px 24px 80px; background: linear-gradient(160deg, var(--primary-light) 0%, var(--white) 50%, var(--accent-light) 100%); text-align: center; }
@@ -141,7 +141,7 @@
 
         .pricing-box { max-width: 600px; margin: 0 auto; background: var(--white); border: 1px solid var(--border); border-radius: var(--radius-lg); padding: 40px; text-align: center; }
         .pricing-box h3 { font-size: 1.3rem; font-weight: 700; margin-bottom: 12px; }
-        .pricing-box .price-label { font-size: 2rem; font-weight: 700; color: var(--primary); margin-bottom: 8px; }
+        .pricing-box .price-label { font-size: 2rem; font-weight: 700; color: var(--accent); margin-bottom: 8px; }
         .pricing-box p { font-size: 0.95rem; color: var(--text-muted); margin-bottom: 24px; line-height: 1.8; }
         .pricing-box .btn { margin-top: 8px; }
 
@@ -160,12 +160,12 @@
         .cta-section p { font-size: 1.05rem; color: var(--text-muted); margin-bottom: 32px; }
 
         .btn { display: inline-flex; align-items: center; justify-content: center; gap: 8px; padding: 14px 32px; border-radius: 50px; font-weight: 600; font-size: 1rem; transition: all 0.2s; border: none; cursor: pointer; font-family: inherit; }
-        .btn-primary { background: var(--primary); color: var(--white); box-shadow: 0 4px 16px rgba(45,142,111,0.3); }
-        .btn-primary:hover { background: var(--primary-dark); transform: translateY(-2px); box-shadow: 0 6px 20px rgba(45,142,111,0.35); }
+        .btn-primary { background: var(--accent); color: var(--white); box-shadow: 0 4px 16px rgba(197,165,90,0.3); }
+        .btn-primary:hover { background: #B8943D; transform: translateY(-2px); box-shadow: 0 6px 20px rgba(197,165,90,0.35); }
         .btn-outline { background: var(--white); color: var(--text); border: 2px solid var(--border); }
         .btn-outline:hover { border-color: var(--primary); color: var(--primary); }
 
-        .footer { background: var(--text); color: rgba(255,255,255,0.7); padding: 56px 24px 32px; }
+        .footer { background: #1B2E5C; color: rgba(255,255,255,0.7); padding: 56px 24px 32px; }
         .footer-inner { max-width: 1100px; margin: 0 auto; display: grid; grid-template-columns: 2fr 1fr 1fr; gap: 48px; margin-bottom: 40px; }
         .footer-brand .logo { color: var(--white); margin-bottom: 12px; }
         .footer-brand p { font-size: 0.9rem; line-height: 1.8; }
@@ -175,9 +175,9 @@
         .footer-contact p { font-size: 0.9rem; margin-bottom: 8px; }
         .footer-bottom { border-top: 1px solid rgba(255,255,255,0.1); padding-top: 24px; text-align: center; font-size: 0.8rem; max-width: 1100px; margin: 0 auto; }
 
-        .scroll-top { position: fixed; bottom: 24px; right: 24px; width: 48px; height: 48px; border-radius: 50%; background: var(--primary); color: var(--white); border: none; font-size: 20px; cursor: pointer; z-index: 900; opacity: 0; visibility: hidden; transition: all 0.3s; box-shadow: var(--shadow); display: flex; align-items: center; justify-content: center; }
+        .scroll-top { position: fixed; bottom: 24px; right: 24px; width: 48px; height: 48px; border-radius: 50%; background: var(--accent); color: var(--white); border: none; font-size: 20px; cursor: pointer; z-index: 900; opacity: 0; visibility: hidden; transition: all 0.3s; box-shadow: var(--shadow); display: flex; align-items: center; justify-content: center; }
         .scroll-top.visible { opacity: 1; visibility: visible; }
-        .scroll-top:hover { background: var(--primary-dark); transform: translateY(-2px); }
+        .scroll-top:hover { background: #B8943D; transform: translateY(-2px); }
 
         .animate { opacity: 0; transform: translateY(24px); transition: opacity 0.6s ease, transform 0.6s ease; }
         .animate.in { opacity: 1; transform: translateY(0); }
@@ -207,7 +207,7 @@
     <header class="header" role="banner">
         <nav class="nav" aria-label="メインナビゲーション">
             <a href="index.html" class="logo" aria-label="ハッピーベル トップページ">
-                <svg viewBox="0 0 36 36" fill="none" aria-hidden="true"><circle cx="18" cy="18" r="18" fill="#2D8E6F"/><path d="M18 9c-1.5 0-2.8 1-3.2 2.4L13 17h-2a2 2 0 00-2 2v1a6 6 0 005.1 5.9l.9.1h6l.9-.1A6 6 0 0027 20v-1a2 2 0 00-2-2h-2l-1.8-5.6A3.3 3.3 0 0018 9z" fill="#fff"/><circle cx="18" cy="27" r="1.5" fill="#D4873F"/></svg>
+                <img src="logo.jpg" alt="ハッピーベル" height="40" style="flex-shrink:0;">
                 ハッピーベル
             </a>
             <ul class="nav-links" role="list">
@@ -338,7 +338,7 @@
         <div class="footer-inner">
             <div class="footer-brand">
                 <div class="logo">
-                    <svg viewBox="0 0 36 36" fill="none" width="28" height="28" aria-hidden="true"><circle cx="18" cy="18" r="18" fill="#2D8E6F"/><path d="M18 9c-1.5 0-2.8 1-3.2 2.4L13 17h-2a2 2 0 00-2 2v1a6 6 0 005.1 5.9l.9.1h6l.9-.1A6 6 0 0027 20v-1a2 2 0 00-2-2h-2l-1.8-5.6A3.3 3.3 0 0018 9z" fill="#fff"/><circle cx="18" cy="27" r="1.5" fill="#D4873F"/></svg>
+                    <img src="logo.jpg" alt="ハッピーベル" height="28" style="flex-shrink:0;">
                     ハッピーベル
                 </div>
                 <p>介護施設・調剤薬局の経営サポートと<br>人材育成研修を通じて、<br>地域の医療・介護を支えます。</p>
