--- a/service-kaigo.html
+++ b/service-kaigo.html
@@ -70,21 +70,22 @@
     <style>
         :root {
             --primary: #1B2E5C;
-            --primary-light: #E8EBF2;
+            --primary-light: #EDF1F7;
             --primary-dark: #0F1D3D;
             --accent: #C5A55A;
-            --accent-light: #FDF8EE;
-            --text: #1A1A2E;
-            --text-muted: #5A5A72;
-            --text-light: #8A8A9A;
-            --bg: #FAFBFC;
+            --accent-light: #FFF8F0;
+            --accent-hover: #D4B76A;
+            --text: #333333;
+            --text-muted: #777777;
+            --text-light: #999999;
+            --bg: #FFF8F0;
             --white: #FFFFFF;
-            --border: #E2E5EA;
-            --shadow-sm: 0 1px 3px rgba(0,0,0,0.06);
-            --shadow: 0 4px 12px rgba(0,0,0,0.08);
-            --shadow-lg: 0 12px 32px rgba(0,0,0,0.12);
-            --radius: 12px;
-            --radius-lg: 20px;
+            --border: #E8E0D4;
+            --shadow-sm: 0 2px 8px rgba(0,0,0,0.04);
+            --shadow: 0 8px 24px rgba(0,0,0,0.06);
+            --shadow-lg: 0 16px 40px rgba(0,0,0,0.08);
+            --radius: 20px;
+            --radius-lg: 24px;
         }
         *, *::before, *::after { margin: 0; padding: 0; box-sizing: border-box; }
         html { scroll-behavior: smooth; -webkit-text-size-adjust: 100%; }
@@ -95,7 +96,7 @@
         .header { position: fixed; top: 0; left: 0; right: 0; background: rgba(27,46,92,0.97); backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px); border-bottom: none; z-index: 1000; transition: box-shadow 0.3s; }
         .header.scrolled { box-shadow: 0 4px 12px rgba(0,0,0,0.15); }
         .nav { max-width: 1100px; margin: 0 auto; padding: 0 24px; display: flex; justify-content: space-between; align-items: center; height: 72px; }
-        .logo { display: flex; align-items: center; gap: 10px; font-weight: 700; font-size: 1.25rem; color: #FFFFFF; }
+        .logo { display: flex; align-items: center; gap: 10px; font-weight: 700; font-size: 1.25rem; color: var(--primary); }
         .logo img { flex-shrink: 0; }
         .nav-links { display: flex; list-style: none; gap: 8px; }
         .nav-links a { display: block; padding: 8px 16px; font-size: 0.9rem; font-weight: 500; color: rgba(255,255,255,0.85); border-radius: 8px; transition: color 0.2s, background 0.2s; }
@@ -106,28 +107,28 @@
         .hamburger:hover { background: rgba(255,255,255,0.12); }
         .hamburger svg { display: block; }
 
-        .mobile-overlay { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.4); z-index: 999; opacity: 0; transition: opacity 0.3s; }
-        .mobile-overlay.active { opacity: 1; }
+        .mobile-overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.4); z-index: 999; opacity: 0; visibility: hidden; pointer-events: none; transition: opacity 0.3s, visibility 0.3s; }
+        .mobile-overlay.active { opacity: 1; visibility: visible; pointer-events: auto; }
         .mobile-menu { display: none; position: fixed; top: 0; right: -280px; width: 280px; height: 100%; background: var(--white); z-index: 1001; padding: 80px 24px 24px; transition: right 0.3s ease; box-shadow: var(--shadow-lg); }
         .mobile-menu.active { right: 0; }
         .mobile-menu a { display: block; padding: 14px 16px; font-size: 1rem; font-weight: 500; color: var(--text); border-radius: 8px; margin-bottom: 4px; transition: background 0.2s; }
-        .mobile-menu a:hover { background: var(--primary-light); color: var(--primary); }
+        .mobile-menu a:hover { background: var(--accent-light); color: var(--primary); }
         .mobile-menu .mobile-cta { display: block; text-align: center; margin-top: 16px; padding: 14px; background: var(--accent); color: var(--white); border-radius: 12px; font-weight: 600; }
         .mobile-close { position: absolute; top: 20px; right: 20px; background: none; border: none; font-size: 24px; cursor: pointer; padding: 8px; border-radius: 8px; color: var(--text-muted); }
 
-        .page-hero { padding: 140px 24px 80px; background: linear-gradient(160deg, var(--primary-light) 0%, var(--white) 50%, var(--accent-light) 100%); text-align: center; }
+        .page-hero { padding: 140px 24px 80px; background: linear-gradient(160deg, var(--accent-light) 0%, var(--white) 50%, var(--primary-light) 100%); text-align: center; }
         .page-hero-inner { max-width: 780px; margin: 0 auto; }
         .page-hero .breadcrumb { font-size: 0.85rem; color: var(--text-muted); margin-bottom: 20px; }
-        .page-hero .breadcrumb a { color: var(--primary); }
+        .page-hero .breadcrumb a { color: var(--accent); }
         .page-hero .breadcrumb a:hover { text-decoration: underline; }
         .page-hero h1 { font-size: clamp(1.8rem, 5vw, 2.8rem); font-weight: 700; line-height: 1.4; margin-bottom: 16px; }
-        .page-hero h1 em { font-style: normal; color: var(--primary); }
+        .page-hero h1 em { font-style: normal; color: var(--accent); }
         .page-hero .hero-desc { font-size: clamp(1rem, 2.5vw, 1.15rem); color: var(--text-muted); line-height: 1.9; }
 
         .section { padding: 96px 24px; }
         .section-alt { background: var(--bg); }
         .section-header { text-align: center; margin-bottom: 56px; }
-        .section-label { display: inline-block; font-size: 0.8rem; font-weight: 600; text-transform: uppercase; letter-spacing: 0.1em; color: var(--primary); margin-bottom: 12px; }
+        .section-label { display: inline-block; font-size: 0.8rem; font-weight: 600; text-transform: uppercase; letter-spacing: 0.1em; color: var(--accent); margin-bottom: 12px; }
         .section-title { font-size: clamp(1.6rem, 4vw, 2.2rem); font-weight: 700; margin-bottom: 16px; }
         .section-desc { font-size: 1.05rem; color: var(--text-muted); max-width: 560px; margin: 0 auto; }
         .container { max-width: 1100px; margin: 0 auto; }
@@ -148,14 +149,14 @@
         .faq-list { max-width: 800px; margin: 0 auto; }
         .faq-item { border: 1px solid var(--border); border-radius: var(--radius); margin-bottom: 12px; overflow: hidden; background: var(--white); }
         .faq-q { padding: 20px 24px; font-weight: 600; font-size: 1rem; cursor: pointer; display: flex; justify-content: space-between; align-items: center; gap: 16px; transition: background 0.2s; }
-        .faq-q:hover { background: var(--primary-light); }
-        .faq-q::after { content: '＋'; font-size: 1.2rem; color: var(--primary); flex-shrink: 0; transition: transform 0.3s; }
+        .faq-q:hover { background: var(--accent-light); }
+        .faq-q::after { content: '＋'; font-size: 1.2rem; color: var(--accent); flex-shrink: 0; transition: transform 0.3s; }
         .faq-item.open .faq-q::after { content: '－'; }
         .faq-a { padding: 0 24px; max-height: 0; overflow: hidden; transition: max-height 0.3s ease, padding 0.3s ease; }
         .faq-item.open .faq-a { padding: 0 24px 20px; max-height: 300px; }
         .faq-a p { font-size: 0.95rem; color: var(--text-muted); line-height: 1.9; }
 
-        .cta-section { text-align: center; background: linear-gradient(160deg, var(--primary-light), var(--accent-light)); }
+        .cta-section { text-align: center; background: linear-gradient(160deg, var(--accent-light), var(--primary-light)); }
         .cta-section h2 { font-size: clamp(1.5rem, 3.5vw, 2rem); font-weight: 700; margin-bottom: 16px; }
         .cta-section p { font-size: 1.05rem; color: var(--text-muted); margin-bottom: 32px; }
 
@@ -165,7 +166,7 @@
         .btn-outline { background: var(--white); color: var(--text); border: 2px solid var(--border); }
         .btn-outline:hover { border-color: var(--primary); color: var(--primary); }
 
-        .footer { background: #1B2E5C; color: rgba(255,255,255,0.7); padding: 56px 24px 32px; }
+        .footer { background: var(--primary); color: rgba(255,255,255,0.7); padding: 56px 24px 32px; }
         .footer-inner { max-width: 1100px; margin: 0 auto; display: grid; grid-template-columns: 2fr 1fr 1fr; gap: 48px; margin-bottom: 40px; }
         .footer-brand .logo { color: var(--white); margin-bottom: 12px; }
         .footer-brand p { font-size: 0.9rem; line-height: 1.8; }
@@ -244,6 +245,9 @@
             <p class="hero-desc">稼働率向上から人材定着まで、介護施設特有の複合的な経営課題に対して<br>実践的な改善策を提案・実行し、成果が出るまで伴走します。</p>
         </div>
     </section>
+
+    <!-- Wave divider -->
+    <div style="margin-top:-1px;line-height:0;overflow:hidden;"><svg viewBox="0 0 1440 80" fill="none" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" style="width:100%;height:60px;display:block;"><path d="M0,40 C360,80 720,0 1080,40 C1260,60 1380,50 1440,40 L1440,0 L0,0 Z" fill="#FFF8F0" opacity="0.5"/><path d="M0,30 C240,70 480,10 720,40 C960,70 1200,10 1440,30 L1440,0 L0,0 Z" fill="#FFF8F0"/></svg></div>
 
     <section class="section">
         <div class="container">
