Replace logo.jpg with inline SVG bell icon across all pages
- Header: 36px navy bell with gold clapper and smile face
- Footer: 28px matching design
- Removed all logo.jpg references from 6 HTML files
- Kept 'ハッピーベル' as HTML text outside SVG

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <header class="header" role="banner">
         <nav class="nav" aria-label="メインナビゲーション">
             <a href="index.html" class="logo" aria-label="ハッピーベル トップページ">
-                <img src="logo.jpg" alt="ハッピーベル" height="40" style="flex-shrink:0;">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 36" width="36" height="36" fill="none" aria-hidden="true" style="flex-shrink:0;"><path d="M18 4c-1.5 0-2.7 1.2-2.7 2.7v.8C11.5 8.7 8.5 12.3 8.5 16.5v6L6 25v1.5h24V25l-2.5-2.5v-6c0-4.2-3-7.8-6.8-9v-.8C20.7 5.2 19.5 4 18 4z" fill="#1B2E5C"/><circle cx="18" cy="31" r="3" fill="#1B2E5C"/><ellipse cx="18" cy="22.5" rx="1.8" ry="3" fill="#C5A55A"/><circle cx="14.5" cy="17" r="1.2" fill="#C5A55A"/><circle cx="21.5" cy="17" r="1.2" fill="#C5A55A"/><path d="M14.5 20.5q1.5 2 3.5 2t3.5-2" stroke="#C5A55A" stroke-width="1" stroke-linecap="round" fill="none"/></svg>
                 ハッピーベル
             </a>
             <ul class="nav-links" role="list">
@@ -253,7 +253,7 @@
         <div class="footer-inner">
             <div class="footer-brand">
                 <div class="logo">
-                    <img src="logo.jpg" alt="ハッピーベル" height="28" style="flex-shrink:0;">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 28" width="28" height="28" fill="none" aria-hidden="true" style="flex-shrink:0;"><path d="M14 3c-1.2 0-2.1.9-2.1 2.1v.6C9 6.7 6.6 9.5 6.6 12.8v4.7L4.7 19.4v1.2h18.6v-1.2l-1.9-1.9v-4.7c0-3.3-2.4-6.1-5.3-7.1v-.6C16.1 3.9 15.2 3 14 3z" fill="#1B2E5C"/><circle cx="14" cy="24" r="2.3" fill="#1B2E5C"/><ellipse cx="14" cy="17.5" rx="1.4" ry="2.3" fill="#C5A55A"/><circle cx="11.3" cy="13.2" r=".9" fill="#C5A55A"/><circle cx="16.7" cy="13.2" r=".9" fill="#C5A55A"/><path d="M11.3 15.9q1.2 1.5 2.7 1.5t2.7-1.5" stroke="#C5A55A" stroke-width=".8" stroke-linecap="round" fill="none"/></svg>
                     ハッピーベル
                 </div>
                 <p>介護施設・調剤薬局の経営サポートと<br>人材育成研修で地域医療を支えます。</p>
